# abbccc24

./: README.md
helpers/: cartesian.py  extract.sh
langchain/: main.py  output.txt  pyproject.toml  rag.ipynb  testing.ipynb
langchain/chroma_db/: chroma.sqlite3
