[tool.poetry]
name = "langchain-project"
version = "0.1.0"
description = ""
authors = ["Martin Gaens <djsushi123@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12.0,<3.13"
langchain = "0.3.4"
langgraph = "0.2.38"
pydantic = "2.9.2"
openai = "1.52.0"
langchain-openai = "0.2.3"
langchain-community = "^0.3.3"
langchain-ollama = "^0.2.0"
langchainhub = "^0.1.21"
langchain-chroma = "^0.1.4"
bs4 = "^0.0.2"
pypdf = "^5.0.1"
unstructured = { version = "0.16.0", extras = ["md"] }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
